Fixed comment section & button alignment issue in ref-data-licensor

--- a/components/page-licensor/page-licensor.less
+++ b/components/page-licensor/page-licensor.less
@@ -331,7 +331,9 @@
     .countryReportColumn div:hover, .countryReportColumn div.selected {
      // background-color: #D3F0FE;
     }
-
+/*
+    //Below classes are repatative classes
+    
     .btn-custom-small {
       color: #ffffff;
       text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -374,7 +376,7 @@
       border-radius: 0.188em !important;
       padding: 0.125em 1.375em !important;
     }
-
+*/
     table {
         width: 80%;
 
@@ -850,4 +852,8 @@ multiple-comments .multiple-comments-parent{
 
   .tdselected{
     background: #d3f0fe !important;
+  }
+  
+  .marginLeft10{
+    margin-left: 10px;
   }
